--- a/views/index.html
+++ b/views/index.html
@@ -1,24 +1,45 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  
-  <div class="page-header">
-    <h1>Welcome to Twitter.js!</h1>
+
+<div class="page-header">
+  <h1>Welcome to Twitter.js!</h1>
+</div>
+<div class="row">
+  <div class="col-md-3">
+    <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg"><br>
+    <b>Your Name</b><br>
+    100 followers
   </div>
-  <div class="row">
-    <div class="col-md-3">
-      <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg"><br>
-      <b>Your Name</b><br>
-      100 followers
-    </div>
-    <div class="col-md-9">
-    
-      <!-- display tweets here -->
+  <div class="col-md-9 feed">
+    <h2>All Tweets</h2>
+
+    <!-- display tweets here -->
+    <img id="profpic" src="http://www.marketsmithinc.com/wp-content/uploads/2012/11/twitter-bird.jpg">
+    <div id="proffeed">
       {% for tweet in tweets %}
-        <li>{{tweet.text}}</li>
-      {% endfor %}
+      <div id="name">{{tweet.name}}</div>
       
+      <li>{{tweet.text}}</li>
+      {% endfor %}
     </div>
-  </div>
+
+
+
     
+  </div>
+  {% if showForm %}
+  <form action="/tweets" method="POST">
+    <label for="name_field">Name:</label>
+    <input name="name" type="text" id="name_field" />
+
+    <label for="text_field">Text:</label>
+    <input name="text" type="text" id="text_field" style="width: 350px;" />
+
+    <input type="submit" value="Submit" />
+  </form>
+  {% endif %}
+</div>
+
 {% endblock %}
+
